tests/testfiles/valid/arithmetics/multiple_div.c
int main(){
    int a = 18;
    return a / 2 / 2;
}