tests/testfiles/invalid/arithmetics/string_mult.c
int main() {
    return "chaine" * 2;
}
